# libretranslate-gui

./: .gitignore  LICENSE  README.md  po4a.cfg  pyproject.toml  pyproject.toml.bak
.github/workflows/: build-rpm.yml  release.yml
.tx/: config
build-new/libretranslate-gui_0.2.1_all/DEBIAN/: control
build-new/libretranslate-gui_0.2.1_all/usr/lib/python3/dist-packages/libretranslate_gui/: history.py
build-new/libretranslate-gui_0.2.1_all/usr/share/applications/: se.danielnylander.LibreTranslateAssistant.desktop
build-new/libretranslate-gui_0.2.1_all/usr/share/locale/sv/LC_MESSAGES/: libretranslate-gui.mo
build-new/libretranslate-gui_0.2.2_all/DEBIAN/: control
build-new/libretranslate-gui_0.2.2_all/usr/lib/python3/dist-packages/libretranslate_gui/: __init__.py  main.py  po_parser.py  window.py
data/: se.danielnylander.LibreTranslateAssistant.desktop  se.danielnylander.LibreTranslateAssistant.desktop.in
data/man/: libretranslate-gui.1
pkg/libretranslate-gui_0.1.0_all/DEBIAN/: control
pkg/libretranslate-gui_0.1.0_all/usr/lib/python3/dist-packages/libretranslate_gui/: window.py
po/: POTFILES.in  README.md  libretranslate-gui.pot  sv.mo  sv.po
po/man/: libretranslate-gui.1.pot  sv.po
po/sv/LC_MESSAGES/: libretranslate-gui.mo
rpm/: launcher  libretranslate-gui.spec
rpm-build/libretranslate-gui_0.2.1/usr/lib/python3/dist-packages/libretranslate_gui/: main.py
src/libretranslate_gui/: __init__.py  api.py  main.py  window.py
